--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 330px;
+    height: 380px;
     margin-bottom: 100px;
 }
 
@@ -16,7 +16,7 @@
     height: 100%;
 }
 
-.carousel img {
+.slide {
     display: flex;
     position: absolute;
     top: 0;
@@ -24,7 +24,13 @@
     width: 100%;
     object-fit: cover;
     object-position: 50% 0%;
-    transition: opacity 1s ease;
+    transition: all ease-in-out 1000ms;
+    &--display {
+        opacity: 1;
+    }
+    &--hide {
+        opacity: 0;
+    }
 }
 
 @keyframes slideIn {
