--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -14,12 +14,17 @@
 .carousel {
     width: 100%;
     height: 100%;
+    &__pagination {
+        z-index: 1;
+        margin-bottom: 15px;
+    }
 }
 
 .slide {
     display: flex;
     position: absolute;
     top: 0;
+    left: 0;
     height: 329px;
     width: 100%;
     object-fit: cover;
@@ -27,9 +32,11 @@
     transition: all ease-in-out 1000ms;
     &--display {
         opacity: 1;
+        left: 0;
     }
     &--hide {
         opacity: 0;
+        left: 100%;
     }
 }
 
@@ -41,9 +48,8 @@
 }
 
 .catch {
+    z-index: 1;
     display: flex;
-    position: absolute;
-    bottom: 0;
     justify-content: center;
     align-items: center;
     width: 100%;
