--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,4 +1,5 @@
 $primary-bg-color: #272727;
 $primary-font-color: white;
 
-$main-gradient: linear-gradient(90deg, #4b00ea 0%, #aecbec 100%);
+$main-gradient: linear-gradient(90deg, #4b00ea 0%, #73cdff 100%);
+$main-gradient-v: linear-gradient(0deg, #4b00ea 0%, #73cdff 100%);
