--- a/src/pages/projectsPage.scss
+++ b/src/pages/projectsPage.scss
@@ -1,4 +1,8 @@
 .projects {
+    h1 {
+        font-size: 60px;
+        margin-bottom: 50px;
+    }
     display: flex;
     flex-direction: column;
     justify-content: center;
