--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -7,7 +7,11 @@
 }
 
 .slide-in {
-    animation: slideInFromLeft 0.5s ease-in-out both;
+    animation: slideInFromLeft 800ms ease-in-out;
+}
+
+.fade-in {
+    animation: fadeIn 800ms ease-in-out;
 }
 
 @keyframes slideInFromLeft {
@@ -21,10 +25,20 @@
     }
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .content-container {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 65% 35%;
     padding-bottom: 115px;
+    margin: 0 200px;
 }
 
 .arrow {
