--- a/src/pages/errorPage.scss
+++ b/src/pages/errorPage.scss
@@ -1,7 +1,9 @@
 .error-page {
     display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
+    gap: 20px;
 }
