Scrolled 3D Banner ok

--- a/src/components/organisms/footer.scss
+++ b/src/components/organisms/footer.scss
@@ -3,7 +3,8 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
+    margin-top: 50px;
     p {
         margin-bottom: 5px;
     }
