--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -45,7 +45,8 @@
     display: flex;
     position: relative;
     width: 19px;
-    top: 25px;
-    left: -20px;
+    top: 45px;
+    left: -40px;
     cursor: pointer;
+    padding: 20px;
 }
