--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,5 +1,6 @@
 $primary-bg-color: #272727;
 $primary-font-color: white;
+$primary-border-color: #73cdff;
 
 $main-gradient: linear-gradient(90deg, #4b00ea 40%, #73cdff 100%);
 $main-gradient-v: linear-gradient(0deg, #4b00ea 0%, #73cdff 100%);
