--- a/src/components/molecules/sectionHeader.scss
+++ b/src/components/molecules/sectionHeader.scss
@@ -8,8 +8,9 @@
         align-items: center;
         text-align: center;
         width: 80%;
-        margin-bottom: 40px;
+        margin-bottom: 100px;
         font-size: 14px;
+        line-height: 24px;
     }
     &__title {
         position: relative;
