--- a/src/components/molecules/logoBand.scss
+++ b/src/components/molecules/logoBand.scss
@@ -14,6 +14,7 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    max-width: 1440px;
     padding: 3px;
     height: 10px;
     overflow: hidden;
