--- a/src/index.scss
+++ b/src/index.scss
@@ -142,12 +142,17 @@ body {
     font-family: Comfortaa;
     color: white;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #root {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    align-items: center;
+    width: 100%;
+    max-width: 1440px;
     height: 100vh;
 }
 
@@ -155,6 +160,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
+    width: 100%;
 }
 
 h1,
@@ -178,7 +184,6 @@ h6 {
 .page {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
