--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -4,3 +4,5 @@ $primary-border-color: #73cdff;
 
 $main-gradient: linear-gradient(90deg, #4b00ea 40%, #73cdff 100%);
 $main-gradient-v: linear-gradient(0deg, #4b00ea 0%, #73cdff 100%);
+
+$mobile-width: 769px;
