--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -1,4 +1,5 @@
-@import '../../assets/variables.scss';
+@import '../../assets/variables.scss', '../../assets/mixins.scss';
+
 .carousel-wrapper {
     position: relative;
     overflow: hidden;
@@ -25,7 +26,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 329px;
+    height: 100%;
     width: 100%;
     object-fit: cover;
     object-position: 50% 0%;
@@ -53,10 +54,20 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 77px;
+    height: auto;
     padding: 20px;
     font-family: Comfortaa;
-    font-size: 40px;
+    font-size: 35px;
     text-transform: uppercase;
     background: $main-gradient;
+}
+
+@include mobileQ {
+    .carousel-wrapper {
+        height: 200px;
+    }
+    .catch {
+        text-align: center;
+        font-size: 20px;
+    }
 }
