--- a/src/components/organisms/openAnim.scss
+++ b/src/components/organisms/openAnim.scss
@@ -77,9 +77,11 @@
     }
     99% {
         height: 100%;
+        width: 100%;
     }
     100% {
         opacity: 0;
         height: 0;
+        width: 0;
     }
 }
