--- a/src/components/molecules/aside.scss
+++ b/src/components/molecules/aside.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 272px;
+    width: 35%;
     min-height: 395px;
     gap: 15px;
     padding: 50px 77px 50px 80px;
