--- a/src/components/molecules/logoBand.scss
+++ b/src/components/molecules/logoBand.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 180px;
 }
 
