--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,12 +1,19 @@
 @import '../assets/mixins.scss';
 
+.content-container {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 115px;
+    gap: 50px;
+    margin: 0 100px;
+}
+
 .articles-container {
     position: relative;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 100%;
-    margin: 0 200px;
+    width: 65%;
 }
 
 .slide-in {
@@ -37,12 +44,6 @@
     }
 }
 
-.content-container {
-    display: grid;
-    grid-template-columns: 65% 35%;
-    padding-bottom: 115px;
-}
-
 .arrow {
     display: flex;
     position: relative;
@@ -58,6 +59,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin: 0 20px;
         padding-bottom: 60px;
         gap: 60px;
     }
