anchor bug correction

--- a/src/components/molecules/article.scss
+++ b/src/components/molecules/article.scss
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: fit-content;
+    padding-top: 50px;
     &__title {
         display: flex;
         font-size: 40px;
