--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -48,6 +48,7 @@
     display: flex;
     position: relative;
     width: 24px;
+    top: 50px;
     left: -10px;
     cursor: pointer;
     padding: 20px;
