--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,4 +1,6 @@
 $primary-bg-color: #272727;
+$primary-bg-color-dark: darken($primary-bg-color, 10%);
+$primary-bg-color-light: lighten($primary-bg-color, 5%);
 $primary-font-color: white;
 $primary-border-color: #73cdff;
 
@@ -6,3 +8,4 @@ $main-gradient: linear-gradient(90deg, #4b00ea 40%, #73cdff 100%);
 $main-gradient-v: linear-gradient(0deg, #4b00ea 0%, #73cdff 100%);
 
 $mobile-width: 769px;
+$tablet-width: 950px;
