--- a/src/components/molecules/navbar.scss
+++ b/src/components/molecules/navbar.scss
@@ -1,4 +1,4 @@
-@import '../../assets/mixins.scss';
+@import '../../assets/mixins.scss', '../../assets/variables.scss';
 
 .nav-bar {
     display: flex;
@@ -8,6 +8,36 @@
     width: 100%;
     height: 63px;
     gap: 53px;
+    &-mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 58px;
+        padding: 20px 0;
+        line-height: 24px;
+        text-align: center;
+    }
+}
+
+.nav-dropdown {
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    width: 100%;
+    &-menu {
+        width: 100%;
+        li {
+            padding: 10px;
+            width: 100%;
+            border-top: 1px solid $primary-bg-color-dark;
+            border-bottom: 1px solid $primary-bg-color-light;
+        }
+    }
+}
+
+.active {
+    color: $primary-border-color;
 }
 
 .nav-btn {
@@ -15,13 +45,4 @@
     text-decoration: none;
     color: white;
     padding: 10px;
-}
-
-@include mobileQ {
-    .nav-bar {
-        flex-direction: column;
-        height: auto;
-        gap: 53px;
-        padding: 20px 0;
-    }
 }
