--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -53,18 +53,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: auto;
     padding: 20px;
     font-family: Comfortaa;
     font-size: 35px;
+    line-height: 40px;
     text-transform: uppercase;
     background: $main-gradient;
 }
 
 @include mobileQ {
     .carousel-wrapper {
-        height: 200px;
+        height: 250px;
+        margin-bottom: 0px;
+    }
+    .carousel__pagination {
+        height: 5px;
+        input[type='radio'] {
+            width: 8px;
+        }
     }
     .catch {
         text-align: center;
