--- a/src/components/molecules/navbar.scss
+++ b/src/components/molecules/navbar.scss
@@ -7,6 +7,7 @@
     align-items: center;
     width: 100%;
     height: 63px;
+    margin: 0 20px;
     gap: 53px;
     &-mobile {
         display: flex;
