hover on tech pictos

--- a/src/pages/projectsPage.scss
+++ b/src/pages/projectsPage.scss
@@ -10,9 +10,14 @@
     justify-content: flex-start;
     align-items: center;
     margin-left: 10px;
+    margin: 20px 0;
 }
 
 .tech-picto {
+    transition: all ease-in-out 200ms;
+    &:hover {
+        transform: scale(1.4);
+    }
     &__container {
         margin-left: 10px;
         display: flex;
