Light mode 1st steps

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -6,7 +6,7 @@ $primary-border-color: #73cdff;
 
 $main-gradient: linear-gradient(90deg, #4b00ea 40%, #73cdff 100%);
 $main-gradient-v: linear-gradient(180deg, #4b00ea 0%, #73cdff 100%);
-$main-gradient-reverse: linear-gradient(10deg, #4b00ea 40%, #73cdff 100%);
+$main-gradient-reverse: linear-gradient(90deg, #73cdff 100%, #4b00ea 40%);
 
 $mobile-width: 769px;
 $tablet-width: 950px;
