--- a/src/components/molecules/navbar.scss
+++ b/src/components/molecules/navbar.scss
@@ -19,6 +19,12 @@
         line-height: 24px;
         text-align: center;
     }
+    &__container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
 }
 
 .nav-dropdown {
