--- a/src/components/organisms/player.scss
+++ b/src/components/organisms/player.scss
@@ -10,7 +10,8 @@
     padding: 10px;
     margin: 20px 0;
     border: 2px solid $primary-border-color;
-    background: none;
+    background: $primary-bg-color;
+    color: white;
     &__selection {
         width: 100%;
         padding: 10px 10px;
