light mode and colorband animation correction

--- a/src/assets/keyframes.scss
+++ b/src/assets/keyframes.scss
@@ -17,3 +17,12 @@
         opacity: 1;
     }
 }
+
+@keyframes gradientMove {
+    0% {
+        background-position: 0% 100%;
+    }
+    100% {
+        background-position: 100% 0%;
+    }
+}
