--- a/src/index.scss
+++ b/src/index.scss
@@ -147,6 +147,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: all ease-in-out 300ms;
 }
 
 .light {
