--- a/src/components/molecules/sectionHeader.scss
+++ b/src/components/molecules/sectionHeader.scss
@@ -1,4 +1,5 @@
-@import '../../assets/variables.scss', '../../assets/mixins.scss';
+@import '../../assets/variables.scss', '../../assets/mixins.scss',
+    '../../assets/keyframes.scss';
 
 .section {
     &__header {
@@ -11,32 +12,36 @@
         margin-bottom: 100px;
         font-size: 14px;
         line-height: 24px;
+        border-radius: 25px;
     }
     &__title {
         position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        background: none;
         width: 100%;
         font-size: 40px;
         text-transform: uppercase;
         h1 {
+            z-index: 1;
             display: flex;
             height: fit-content;
             line-height: 40px;
             position: relative;
             top: 10px;
+            background: none;
         }
         &__colorband {
-            z-index: -1;
             position: relative;
             top: -35px;
             display: block;
             width: 100%;
             height: 33px;
             padding: 10px 0;
-            background: $main-gradient;
+            background: $main-gradient-looped;
+            background-size: 400% 100%;
+            animation: gradientMove 6000ms linear infinite;
         }
     }
 }
