slight LMode correction

--- a/src/components/molecules/carousel.scss
+++ b/src/components/molecules/carousel.scss
@@ -1,4 +1,5 @@
-@import '../../assets/variables.scss', '../../assets/mixins.scss';
+@import '../../assets/variables.scss', '../../assets/mixins.scss',
+    '../../assets/keyframes.scss';
 
 .carousel-wrapper {
     position: relative;
