link color in darkmode corrected

--- a/src/index.scss
+++ b/src/index.scss
@@ -155,10 +155,13 @@ body {
     font-family: Comfortaa;
     color: black;
     animation-name: fadeIn 300ms both;
-
     a {
         color: black;
     }
+}
+
+a {
+    color: white;
 }
 
 header,
