--- a/src/components/molecules/article.scss
+++ b/src/components/molecules/article.scss
@@ -48,22 +48,24 @@
 
         .carousel-button {
             position: absolute;
-            bottom: 20%;
+            bottom: 50%;
             transform: translateY(-50%);
             background-color: rgba(0, 0, 0, 0.5);
             color: white;
             border: none;
             padding: 10px;
             cursor: pointer;
-            z-index: 10;
+            z-index: 2;
         }
 
         .carousel-button.left {
             left: 0;
+            transform: scale(2);
         }
 
         .carousel-button.right {
             right: 0;
+            transform: scale(2);
         }
     }
     &__image {
@@ -71,13 +73,12 @@
         left: 50%;
         transform: translateX(-50%);
         position: absolute;
-        margin-left: 23px;
         margin-top: 50px;
         margin-bottom: 20px;
         max-height: 300px;
         max-width: 500px;
         object-fit: fill;
-        transition: all 0.5s ease-in-out;
+        transition: all 0.3s ease-in;
         opacity: 0;
         &-center {
             top: -25px;
@@ -95,6 +96,117 @@
             left: 100%;
             transform: translateX(-50%) scale(0.4);
             opacity: 0.5;
+        }
+        &-unselected {
+            bottom: -400%;
+            opacity: 0;
+        }
+        &-modal {
+            z-index: 3;
+            position: fixed;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            &-bg {
+                z-index: 4;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100vw;
+                height: 100vh;
+                background-color: white;
+                opacity: 0.3;
+            }
+            &-content {
+                display: flex;
+                position: absolute;
+                width: 90%;
+                background: $primary-bg-color;
+                border-radius: 25px;
+                margin: auto;
+                z-index: 5;
+            }
+            .article__image {
+                position: absolute;
+                top: 20%;
+                left: 50%;
+                transform: translateX(-50%);
+                max-height: 90%;
+                max-width: 90%;
+                object-fit: fill;
+                transition: all 0.5s ease-in-out;
+                opacity: 0;
+                &-center {
+                    top: -25px;
+                    opacity: 1;
+                    z-index: 2;
+                }
+                &-previous {
+                    top: 0;
+                    left: 0;
+                    transform: translateX(-50%) scale(0.4);
+                    opacity: 0.5;
+                }
+                &-next {
+                    top: 0;
+                    left: 100%;
+                    transform: translateX(-50%) scale(0.4);
+                    opacity: 0.5;
+                }
+                &-unselected {
+                    bottom: -400%;
+                    opacity: 0;
+                }
+            }
+            .article__image-container {
+                display: flex;
+                position: relative;
+                flex-direction: row;
+                justify-self: center;
+                align-items: center;
+                margin-top: 0px;
+                height: 90vh;
+                max-height: 800px;
+                width: 100%;
+                overflow: hidden;
+                margin: 0 auto;
+            }
+            .carousel-button {
+                position: absolute;
+                bottom: 50%;
+                transform: translateY(-50%);
+                background-color: rgba(0, 0, 0, 0.5);
+                color: white;
+                border: none;
+                padding: 10px;
+                cursor: pointer;
+                z-index: 5;
+            }
+            .carousel-button.left {
+                left: 10px;
+                transform: scale(3);
+            }
+
+            .carousel-button.right {
+                right: 10px;
+                transform: scale(3);
+            }
+            .modal-close-btn {
+                cursor: pointer;
+                position: absolute;
+                top: -20px;
+                right: -20px;
+                z-index: 5;
+            }
+            .fa-circle-xmark {
+                width: 40px;
+                height: 40px;
+                font-size: 40px;
+            }
         }
     }
 }
